syntax = "proto3";
option go_package = "github.com/yvsbb95/templateGoProject/pb";

message UserID {
  int64 ID = 1;
}

message User {
  int64 ID = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserID);
  rpc GetUser(UserID) returns (User);
}